2011-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/src/rtemsobjectgetname.c:
	Include <rtems/rtems/object.h> (Missing prototype).
	* sapi/src/getversionstring.c: Include <rtems.h> (Missing prototype).
	* libcsupport/src/termios.c: Make rtems_termios_refill_transmitter
	static.

2011-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1981/cpukit
	* posix/Makefile.am: Reflect changes below.
	* posix/src/pthreadsetcputime.c, posix/src/pthreadgetcputime.c:
	Remove (Obsolete).

2011-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* ftpd/ftpd.c: Make split_command static.
	* libnetworking/rtems/rtems_dhcp.c: 
	Make format_ip, dhcp_init static.
	* libnetworking/nfs/bootp_subr.c:
	Make bootp_strdup_realloc static.

2011-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/src/rtemsobjectapiminimumclass.c: 
	Include <rtems/rtems/object.h> (Missing prototype).
	Adjust rtems_object_api_minimum_class to prototype.
	* libcsupport/src/sup_fs_is_separator.c:
	Include <rtems/libio_.h> (Missing prototype).

2011-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/src/workspace.c:
 	Include <rtems/rtems/support.h> (Missing prototypes).

2011-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1983/networking
	* libnetworking/libc/gethostbyht.c (gethostent_r):
	Abort if (!hostf).

2011-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/libc/ns_parse.c (ns_parserr):
	Comment out if ( section < 0 ) (type is unsigned). 
	* libnetworking/libc/gethostbydns.c: Comment out __dns_getanswer
	(Unused).

2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/src/ratemonperiod.c: Make _Rate_monotonic_Update_statistics
	static.
	* libcsupport/src/pipe.c: Include <unistd.h>.
	Include <rtems/pipe.h>.
	* libmisc/stackchk/check.c: Make Stack_check_Initialize,
	Stack_check_Dump_threads_usage static.
	* libfs/src/pipe/pipe.c: Include <rtems/pipe.h> (Missing prototype).

2011-12-06	Sebastian Huber <sebastian.huber@embedded-brains.de>
